[tool.poetry]
name = "pyra-setup-tool"
version = "1.0.0"
description = ""
authors = ["Moritz Makowski <moritz.makowski@tum.de>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.7.1"
pytest-cov = "^4.0.0"
yapf = "^0.40.2"
deepdiff = "^6.7.1"
tum-esm-utils = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.mypy]
strict = true
implicit_reexport = true

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true

[[tool.mypy.overrides]]
module = ["colorama.*", "deepdiff"]
ignore_missing_imports = true
