[project]
name = "pyra-setup-tool"
version = "4.1.3"
description = "manage your Pyra installations"
authors = [{ name = "Moritz Makowski", email = "moritz.makowski@tum.de" }]
dependencies = ["colorama==0.4.6"]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "GPL-3" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "yapf>=0.40.2",
    "deepdiff>=6.7.1",
    "tum-esm-utils>=1.8.0",
]

[tool.pdm]
package-type = "application"

[tool.setuptools]
packages = []

[tool.mypy]
strict = true
implicit_reexport = true

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true

[[tool.mypy.overrides]]
module = ["colorama.*", "deepdiff"]
ignore_missing_imports = true
