[project]
name = "pyra-setup-tool"
version = "4.2.0"
description = "manage your Pyra installations"
authors = [{ name = "Moritz Makowski", email = "moritz.makowski@tum.de" }]
dependencies = ["colorama==0.4.6"]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "GPL-3" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "yapf>=0.40.2",
    "deepdiff>=6.7.1",
    "tum-esm-utils>=1.8.0",
    "ruff>=0.9.7",
]

[tool.pdm]
distribution = false

[tool.setuptools]
packages = []

[tool.mypy]
strict = true
implicit_reexport = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "E741"]
exclude = ["tests/*"]

[[tool.mypy.overrides]]
module = ["colorama.*", "deepdiff"]
ignore_missing_imports = true
